--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div onclick="selectFood(this);verificar()" id="food3" data-identifier="food-option" class="option">
@@ -60,6 +61,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div onclick="selectFood(this);verificar()" id="food4" data-identifier="food-option" class="option">
@@ -67,6 +69,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
             </div>
@@ -83,6 +86,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="drink2" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
@@ -91,6 +95,7 @@
 
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="drink3" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
@@ -98,6 +103,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="drink4" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
@@ -105,6 +111,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
             </div>
@@ -122,6 +129,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="dessert2" onclick="selectDessert(this);verificar()" data-identifier="food-option"
@@ -130,6 +138,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="dessert3" onclick="selectDessert(this);verificar()" data-identifier="food-option"
@@ -138,6 +147,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="dessert4" onclick="selectDessert(this);verificar()" data-identifier="food-option"
@@ -146,6 +156,7 @@
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
                     <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
             </div>
