--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         <div class="modal">
             <div class="modal-pedido">
                 <h5>Confirme seu pedido</h5>
-                <div class="final"><h6 id="food">Frango Yin Yang</h6><span id="food__price">14,90</span></div>    
-                <div class="final"><h6 id="drink">Frango Yin Yang</h6><span id="drink__price">14,90</span></div>  
-                <div class="final"><h6 id="dessert">Frango Yin Yang</h6><span id="dessert__price">14,90</span></div>  
+                <div class="final"><h6 id="food">Frango Yin Yang</h6><span id="food__price"></span></div>    
+                <div class="final"><h6 id="drink">Frango Yin Yang</h6><span id="drink__price"></span></div>  
+                <div class="final"><h6 id="dessert">Frango Yin Yang</h6><span id="dessert__price"></span></div>  
                 <h5>TOTAL<span>R$  <span id="total">28.60</span></span></h5>
                 <button  id="button2">Tudo certo, pode pedir!</button>
                 <button onclick="cancelar()"id="button3">Cancelar</button>
