Todas funçoes implementadas

--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
         <div class="modal">
             <div class="modal-pedido">
                 <h5>Confirme seu pedido</h5>
-                <div class="final"><h6 id="food">Frango Yin Yang</h6><span id="food__price"></span></div>    
-                <div class="final"><h6 id="drink">Frango Yin Yang</h6><span id="drink__price"></span></div>  
-                <div class="final"><h6 id="dessert">Frango Yin Yang</h6><span id="dessert__price"></span></div>  
-                <h5>TOTAL<span>R$  <span id="total">28.60</span></span></h5>
-                <button  id="button2">Tudo certo, pode pedir!</button>
+                <div class="final"><h6 id="food"></h6><span id="food__price"></span></div>    
+                <div class="final"><h6 id="drink"></h6><span id="drink__price"></span></div>  
+                <div class="final"><h6 id="dessert"></h6><span id="dessert__price"></span></div>  
+                <h5>TOTAL<span>R$  <span id="total"></span></span></h5>
+                <button id="button2">Tudo certo, pode pedir!</button>
                 <button onclick="cancelar()"id="button3">Cancelar</button>
             </div>
         </div>
