Adiçao das opçoes no menu

--- a/index.html
+++ b/index.html
@@ -41,34 +41,34 @@
             <div data-identifier="dishes" class="options">
 
                 <div onclick="selectFood(this);verificar()" id="food1" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
+                    <img src="images/frango.png" alt="">
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <p data-identifier="food-price" class="price">R$ 22,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div onclick="selectFood(this);verificar()" id="food2" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/hamburguer.jpg" alt="">
+                    <h3 data-identifier="food-title">Hambúrguer</h3>
+                    <h4>O melhor artesanal da cidade</h4>
+                    <p data-identifier="food-price" class="price">R$ 18,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div onclick="selectFood(this);verificar()" id="food3" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/pizza.jpg" alt="">
+                    <h3 data-identifier="food-title">Pizza</h3>
+                    <h4>Sabor calabresa</h4>
+                    <p data-identifier="food-price" class="price">R$ 37,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div onclick="selectFood(this);verificar()" id="food4" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/batata.jpg" alt="">
+                    <h3 data-identifier="food-title">Batata frita</h3>
+                    <h4>Porção de 500g</h4>
+                    <p data-identifier="food-price" class="price">R$ 25,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
@@ -82,35 +82,34 @@
             <div data-identifier="drinks" class="options">
 
                 <div id="drink1" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/coca.jpg" alt="">
+                    <h3 data-identifier="food-title">Coca-Cola LATA</h3>
+                    <h4>Coca 350ml</h4>
+                    <p data-identifier="food-price" class="price">R$ 4,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="drink2" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/fanta.jpg" alt="">
+                    <h3 data-identifier="food-title">Fanta Laranja LATA</h3>
+                    <h4>Fanta Laranja 350ml</h4>
+                    <p data-identifier="food-price" class="price">R$ 4,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="drink3" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/pepsi.jpg" alt="">
+                    <h3 data-identifier="food-title">Pepsi LATA</h3>
+                    <h4>Pepsi 350ml</h4>
+                    <p data-identifier="food-price" class="price">R$ 4,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="drink4" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/corote.jpg" alt="">
+                    <h3 data-identifier="food-title">Corote</h3>
+                    <h4>500ml de tristeza</h4>
+                    <p data-identifier="food-price" class="price">R$ 2,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
@@ -125,37 +124,37 @@
 
                 <div id="dessert1" onclick="selectDessert(this);verificar()" data-identifier="food-option"
                     class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/petit.jpg" alt="">
+                    <h3 data-identifier="food-title">Petit gâteau</h3>
+                    <h4>Sabor chocolate</h4>
+                    <p data-identifier="food-price" class="price">R$5,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="dessert2" onclick="selectDessert(this);verificar()" data-identifier="food-option"
                     class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/mousse.jpg" alt="">
+                    <h3 data-identifier="food-title">Mousse de limão</h3>
+                    <h4>Porção de 300g</h4>
+                    <p data-identifier="food-price" class="price">R$ 4,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="dessert3" onclick="selectDessert(this);verificar()" data-identifier="food-option"
                     class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/brigadeiro.jpg" alt="">
+                    <h3 data-identifier="food-title">Brigadeiro</h3>
+                    <h4>Porção individual</h4>
+                    <p data-identifier="food-price" class="price">R$ 2,90</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
                 <div id="dessert4" onclick="selectDessert(this);verificar()" data-identifier="food-option"
                     class="option">
-                    <img src="images/comida.png" alt="">
-                    <h3 data-identifier="food-title">Frango Yin Yang</h3>
-                    <h4>Um pouco de batata, um pouco de salada</h4>
-                    <p data-identifier="food-price" class="price">R$ 14,90</p>
+                    <img src="images/pacoquita.jpg" alt="">
+                    <h3 data-identifier="food-title">Paçoquita</h3>
+                    <h4>Unidade</h4>
+                    <p data-identifier="food-price" class="price">R$ 1,00</p>
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
