Correçao de bug no preço final

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/icone.png"/>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -178,7 +179,7 @@
                 <div class="final"><h6 id="food"></h6><span id="food__price"></span></div>    
                 <div class="final"><h6 id="drink"></h6><span id="drink__price"></span></div>  
                 <div class="final"><h6 id="dessert"></h6><span id="dessert__price"></span></div>  
-                <h5>TOTAL<span>R$  <span id="total"></span></span></h5>
+                <h5>TOTAL<span>R$  <span id="resultDisplay"></span></span></h5>
                 <button id="button2">Tudo certo, pode pedir!</button>
                 <button onclick="cancelar()"id="button3">Cancelar</button>
             </div>
