--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <section>
             <h2>Primeiro, seu prato</h2>
-            <div data-identifier="dishes" class="options">
+            <div data-identifier="dishes" class="options foodOptions" >
 
-                <div onclick="selectFood(this);verificar()" id="food1" data-identifier="food-option" class="option">
+                <div onclick="select('foodOptions', this)" id="food1" data-identifier="food-option" class="option">
                     <img src="images/frango.png" alt="">
                     <h3 data-identifier="food-title">Frango Yin Yang</h3>
                     <h4>Um pouco de batata, um pouco de salada</h4>
@@ -49,7 +49,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div onclick="selectFood(this);verificar()" id="food2" data-identifier="food-option" class="option">
+                <div onclick="select('foodOptions', this)" id="food2" data-identifier="food-option" class="option">
                     <img src="images/hamburguer.jpg" alt="">
                     <h3 data-identifier="food-title">Hambúrguer</h3>
                     <h4>O melhor artesanal da cidade</h4>
@@ -57,7 +57,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div onclick="selectFood(this);verificar()" id="food3" data-identifier="food-option" class="option">
+                <div onclick="select('foodOptions', this)" id="food3" data-identifier="food-option" class="option">
                     <img src="images/pizza.jpg" alt="">
                     <h3 data-identifier="food-title">Pizza</h3>
                     <h4>Sabor calabresa</h4>
@@ -65,7 +65,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div onclick="selectFood(this);verificar()" id="food4" data-identifier="food-option" class="option">
+                <div onclick="select('foodOptions', this)" id="food4" data-identifier="food-option" class="option">
                     <img src="images/batata.jpg" alt="">
                     <h3 data-identifier="food-title">Batata frita</h3>
                     <h4>Porção de 500g</h4>
@@ -80,9 +80,9 @@
 
         <section>
             <h2>Agora, sua bebida</h2>
-            <div data-identifier="drinks" class="options">
+            <div data-identifier="drinks" class="options drinkOptions">
 
-                <div id="drink1" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
+                <div id="drink1" onclick="select('drinkOptions', this)" data-identifier="food-option" class="option">
                     <img src="images/coca.jpg" alt="">
                     <h3 data-identifier="food-title">Coca-Cola LATA</h3>
                     <h4>Coca 350ml</h4>
@@ -90,7 +90,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div id="drink2" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
+                <div id="drink2" onclick="select('drinkOptions', this)" data-identifier="food-option" class="option">
                     <img src="images/fanta.jpg" alt="">
                     <h3 data-identifier="food-title">Fanta Laranja LATA</h3>
                     <h4>Fanta Laranja 350ml</h4>
@@ -98,7 +98,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div id="drink3" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
+                <div id="drink3" onclick="select('drinkOptions', this)" data-identifier="food-option" class="option">
                     <img src="images/pepsi.jpg" alt="">
                     <h3 data-identifier="food-title">Pepsi LATA</h3>
                     <h4>Pepsi 350ml</h4>
@@ -106,7 +106,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div id="drink4" onclick="selectDrink(this);verificar()" data-identifier="food-option" class="option">
+                <div id="drink4" onclick="select('drinkOptions', this)" data-identifier="food-option" class="option">
                     <img src="images/corote.jpg" alt="">
                     <h3 data-identifier="food-title">Corote</h3>
                     <h4>500ml de tristeza</h4>
@@ -121,9 +121,9 @@
 
         <section>
             <h2>Por fim, sua sobremesa</h2>
-            <div data-identifier="desserts" class="options">
+            <div data-identifier="desserts" class="options dessertOptions">
 
-                <div id="dessert1" onclick="selectDessert(this);verificar()" data-identifier="food-option"
+                <div id="dessert1" onclick="select('dessertOptions', this)" data-identifier="food-option"
                     class="option">
                     <img src="images/petit.jpg" alt="">
                     <h3 data-identifier="food-title">Petit gâteau</h3>
@@ -132,7 +132,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div id="dessert2" onclick="selectDessert(this);verificar()" data-identifier="food-option"
+                <div id="dessert2" onclick="select('dessertOptions', this)" data-identifier="food-option"
                     class="option">
                     <img src="images/mousse.jpg" alt="">
                     <h3 data-identifier="food-title">Mousse de limão</h3>
@@ -141,7 +141,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div id="dessert3" onclick="selectDessert(this);verificar()" data-identifier="food-option"
+                <div id="dessert3" onclick="select('dessertOptions', this)" data-identifier="food-option"
                     class="option">
                     <img src="images/brigadeiro.jpg" alt="">
                     <h3 data-identifier="food-title">Brigadeiro</h3>
@@ -150,7 +150,7 @@
                     <ion-icon name="checkmark-circle"></ion-icon>
                 </div>
 
-                <div id="dessert4" onclick="selectDessert(this);verificar()" data-identifier="food-option"
+                <div id="dessert4" onclick="select('dessertOptions', this)" data-identifier="food-option"
                     class="option">
                     <img src="images/pacoquita.jpg" alt="">
                     <h3 data-identifier="food-title">Paçoquita</h3>
