Alteração para correção automática

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <!-- POPUP -->
 
     <div id="modal-closeorder" class="modal-container">
-        <div class="modal">
+        <div data-identifier="confirmation-dialog" class="modal">
             <div class="modal-pedido">
                 <h5>Confirme seu pedido</h5>
                 <div class="final"><h6 id="food"></h6><span id="food__price"></span></div>    
